--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "app-minimango",
   "version": "1.0.0",
-  "description":  "Notes app with user authentication",
-  "main":"src/index.js",
+  "description": "Notes app with user authentication",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
-  "keywords": ["notes", "express", "mongodb", "passport"],
+  "keywords": [
+    "notes",
+    "express",
+    "mongodb",
+    "passport"
+  ],
   "author": "masha tar",
   "license": "ISC",
   "type": "module",
@@ -15,6 +20,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
     "express-session": "^1.18.2",
@@ -22,11 +28,11 @@
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "handlebars": "^4.5.0",
+    "dotenv": "^17.2.2"
   },
   "devDependencies": {
-    "dotenv": "^17.2.2",
-    "handlebars": "^4.5.0",
     "nodemon": "^3.1.10",
     "npm-check-updates": "^18.2.1"
   }
