--- a/package.json
+++ b/package.json
@@ -21,16 +21,18 @@
     "bcryptjs": "^3.0.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
     "express-session": "^1.18.2",
+    "handlebars": "^4.5.0",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
-    "handlebars": "^4.5.0",
-    "dotenv": "^17.2.2"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
