--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
   "version": 2,
-  "buildCommand": "npm install",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": null,
-  "regions": ["iad1"],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "builds": [
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/index.js"
+    }
+  ]
 }
